# micromanager-rs-llm

./: ADAPTERS.md  CLAUDE.md  Cargo.toml  LICENSE.txt  Makefile  README.md  build.rs
adapters/mm-adapter-aaaotf/: Cargo.toml
adapters/mm-adapter-aaaotf/src/: aotf.rs
adapters/mm-adapter-aquinas/: Cargo.toml
adapters/mm-adapter-aquinas/src/: aquinas.rs
adapters/mm-adapter-arduino-counter/: Cargo.toml
adapters/mm-adapter-arduino-counter/src/: counter.rs  lib.rs
adapters/mm-adapter-arduino32/: Cargo.toml
adapters/mm-adapter-arduino32/src/: da.rs  hub.rs  lib.rs  shutter.rs  switch.rs
adapters/mm-adapter-asi-wptr/: Cargo.toml
adapters/mm-adapter-asi-wptr/src/: wptr.rs
adapters/mm-adapter-basler/: Cargo.toml
adapters/mm-adapter-basler/src/: camera.rs  lib.rs
adapters/mm-adapter-chuoseiki-qt/: Cargo.toml
adapters/mm-adapter-chuoseiki-qt/src/: xy_stage.rs  z_stage.rs
adapters/mm-adapter-cobolt-official/: Cargo.toml
adapters/mm-adapter-cobolt-official/src/: cobolt_official.rs  lib.rs
adapters/mm-adapter-coherent-scientific-remote/: Cargo.toml
adapters/mm-adapter-coherent-scientific-remote/src/: csr.rs  lib.rs
adapters/mm-adapter-diskovery/: Cargo.toml
adapters/mm-adapter-diskovery/src/: state_device.rs
adapters/mm-adapter-esp32/: Cargo.toml
adapters/mm-adapter-esp32/src/: hub.rs  lib.rs  pwm.rs  shutter.rs  switch.rs  xystage.rs  zstage.rs
adapters/mm-adapter-etl/: Cargo.toml
adapters/mm-adapter-etl/src/: etl.rs
adapters/mm-adapter-hydra-lmt200/: Cargo.toml
adapters/mm-adapter-hydra-lmt200/src/: hydra.rs
adapters/mm-adapter-jai/: Cargo.toml  build.rs
adapters/mm-adapter-jai/src/: camera.rs  shim.cpp
adapters/mm-adapter-leica-dmi/: Cargo.toml
adapters/mm-adapter-leica-dmi/src/: hub.rs  shutter.rs  turret.rs
adapters/mm-adapter-leica-dmr/: Cargo.toml
adapters/mm-adapter-leica-dmr/src/: hub.rs  shutter.rs  turret.rs
adapters/mm-adapter-ludl-low/: Cargo.toml
adapters/mm-adapter-ludl-low/src/: shutter.rs  wheel.rs
adapters/mm-adapter-lumencor-cia/: Cargo.toml
adapters/mm-adapter-lumencor-cia/src/: cia.rs
adapters/mm-adapter-lumencor-spectra/: Cargo.toml
adapters/mm-adapter-lumencor-spectra/src/: spectra.rs
adapters/mm-adapter-marzhauser-lstep/: Cargo.toml
adapters/mm-adapter-marzhauser-lstep-old/: Cargo.toml
adapters/mm-adapter-marzhauser-lstep-old/src/: xy_stage.rs
adapters/mm-adapter-marzhauser-lstep/src/: lib.rs  xy_stage.rs  z_stage.rs
adapters/mm-adapter-microfpga/: Cargo.toml
adapters/mm-adapter-microfpga/src/: analog_input.rs  camera_trigger.rs  hub.rs  laser_trigger.rs  lib.rs  pwm.rs  servo.rs  ttl.rs
adapters/mm-adapter-mpb-laser/: Cargo.toml
adapters/mm-adapter-mpb-laser/src/: lib.rs  mpb_laser.rs
adapters/mm-adapter-neopixel/: Cargo.toml
adapters/mm-adapter-neopixel/src/: neopixel.rs
adapters/mm-adapter-opencv/: Cargo.toml
adapters/mm-adapter-opencv/src/: camera.rs  lib.rs
adapters/mm-adapter-openflexure/: Cargo.toml
adapters/mm-adapter-openflexure/src/: hub.rs  lib.rs  shutter.rs  xystage.rs  zstage.rs
adapters/mm-adapter-openuc2/: Cargo.toml
adapters/mm-adapter-openuc2/src/: hub.rs  lib.rs  shutter.rs  xystage.rs  zstage.rs
adapters/mm-adapter-oxxius-laserboxx/: Cargo.toml
adapters/mm-adapter-oxxius-laserboxx/src/: laserboxx.rs  lib.rs
adapters/mm-adapter-pgfocus/: Cargo.toml
adapters/mm-adapter-pgfocus/src/: focus_stage.rs  lib.rs
adapters/mm-adapter-picam/: Cargo.toml  build.rs
adapters/mm-adapter-picam/src/: camera.rs
adapters/mm-adapter-piezosystem-30dv50/: Cargo.toml
adapters/mm-adapter-piezosystem-30dv50/src/: z_stage.rs
adapters/mm-adapter-piezosystem-ddrive/: Cargo.toml
adapters/mm-adapter-piezosystem-nv120/: Cargo.toml
adapters/mm-adapter-piezosystem-nv40-1/: Cargo.toml
adapters/mm-adapter-piezosystem-nv40-3/: Cargo.toml
adapters/mm-adapter-prior-legacy/: Cargo.toml
adapters/mm-adapter-prior-purefocus/: Cargo.toml
adapters/mm-adapter-prizmatix/: Cargo.toml
adapters/mm-adapter-scientifica-motion8/: Cargo.toml
adapters/mm-adapter-scopeled/: Cargo.toml
adapters/mm-adapter-spot/: Cargo.toml  build.rs
adapters/mm-adapter-sutter-lambda-arduino/: Cargo.toml
adapters/mm-adapter-sutter-lambda2/: Cargo.toml
adapters/mm-adapter-teensy-pulse/: Cargo.toml
adapters/mm-adapter-thorlabs-chrolis/: Cargo.toml
adapters/mm-adapter-thorlabs-ell14/: Cargo.toml
adapters/mm-adapter-thorlabs-pm100x/: Cargo.toml
adapters/mm-adapter-thorlabs-sc10/: Cargo.toml
adapters/mm-adapter-thorlabs-tsp01/: Cargo.toml
adapters/mm-adapter-tofra/: Cargo.toml
adapters/mm-adapter-toptica-ibeam/: Cargo.toml
adapters/mm-adapter-triggerscope/: Cargo.toml
adapters/mm-adapter-triggerscope-mm/: Cargo.toml
adapters/mm-adapter-tsi/: Cargo.toml  build.rs
adapters/mm-adapter-twain/: Cargo.toml  build.rs
adapters/mm-adapter-universal-hub-serial/: Cargo.toml
adapters/mm-adapter-varilc/: Cargo.toml
adapters/mm-adapter-wienecke-sinske/: Cargo.toml
adapters/mm-adapter-xcite-led/: Cargo.toml
adapters/mm-adapter-xcite-xt600/: Cargo.toml
adapters/mm-adapter-xlight/: Cargo.toml
adapters/mm-adapter-xlight-v3/: Cargo.toml
adapters/mm-adapter-yodn-e600/: Cargo.toml
adapters/mm-adapter-yokogawa/: Cargo.toml
adapters/mm-adapter-zaber/: Cargo.toml
micromanager/: build.rs
mm-demo/: Cargo.toml
protocols/: squid_plus_filter_wheel.md  squid_plus_objective_turret.md  xeryon.md
src/: adapter_registry.rs  circular_buffer.rs  config.rs  core.rs  device_manager.rs  error.rs  lib.rs  property.rs  traits.rs  transport.rs  types.rs
src/adapters/: mod.rs
tests/: integration.rs
(+384 files in other folders)
