[workspace]
resolver = "2"
members = [
    "mm-device",
    "mm-core",
    "adapters/mm-adapter-demo",
    "adapters/mm-adapter-cobolt",
    "adapters/mm-adapter-coherent-cube",
    "adapters/mm-adapter-arduino",
    "adapters/mm-adapter-coherent-obis",
    "adapters/mm-adapter-sapphire",
    "adapters/mm-adapter-laser-quantum",
    "adapters/mm-adapter-sutter-lambda",
    "adapters/mm-adapter-oxxius",
    "adapters/mm-adapter-xcite",
    "adapters/mm-adapter-coolled",
    "adapters/mm-adapter-asi-stage",
    "adapters/mm-adapter-marzhauser",
    "adapters/mm-adapter-thorlabs-fw",
    "adapters/mm-adapter-asi-fw",
    "adapters/mm-adapter-vortran",
    "adapters/mm-adapter-vincent",
    "adapters/mm-adapter-corvus",
    "adapters/mm-adapter-precis-excite",
    "adapters/mm-adapter-coolled-pe4000",
    "adapters/mm-adapter-varispec",
    "adapters/mm-adapter-newport-stage",
    "adapters/mm-adapter-scientifica",
    "adapters/mm-adapter-chuoseiki",
    "adapters/mm-adapter-prior",
    "adapters/mm-adapter-ludl",
    "adapters/mm-adapter-sutter-stage",
    "adapters/mm-adapter-neos",
    "adapters/mm-adapter-conix",
    "adapters/mm-adapter-aladdin",
    "adapters/mm-adapter-pecon",
    "adapters/mm-adapter-ismatec",
    "adapters/mm-adapter-hamilton-mvp",
    "adapters/mm-adapter-asifw1000",
    "adapters/mm-adapter-niji",
    "adapters/mm-adapter-ldi",
    "adapters/mm-adapter-omicron",
    "adapters/mm-adapter-carvii",
    "adapters/mm-adapter-spectral-lmm5",
    "adapters/mm-adapter-csuw1",
    "adapters/mm-adapter-elliptec",
    "adapters/mm-adapter-asi-tiger",
    "adapters/mm-adapter-zaber",
    "adapters/mm-adapter-tofra",
    "adapters/mm-adapter-lumencor-spectra",
    "adapters/mm-adapter-oxxius-laserboxx",
    "adapters/mm-adapter-cobolt-official",
    "adapters/mm-adapter-mpb-laser",
    "adapters/mm-adapter-toptica-ibeam",
    "adapters/mm-adapter-coherent-scientific-remote",
    "adapters/mm-adapter-prizmatix",
    "adapters/mm-adapter-yodn-e600",
    "adapters/mm-adapter-neopixel",
    "adapters/mm-adapter-scopeled",
    "adapters/mm-adapter-thorlabs-sc10",
    "adapters/mm-adapter-thorlabs-pm100x",
    "adapters/mm-adapter-thorlabs-tsp01",
    "adapters/mm-adapter-marzhauser-lstep",
    "adapters/mm-adapter-marzhauser-lstep-old",
    "adapters/mm-adapter-chuoseiki-qt",
    "adapters/mm-adapter-scientifica-motion8",
    "adapters/mm-adapter-wienecke-sinske",
    "adapters/mm-adapter-ludl-low",
    "adapters/mm-adapter-prior-legacy",
    "adapters/mm-adapter-prior-purefocus",
    "adapters/mm-adapter-pgfocus",
    "adapters/mm-adapter-piezosystem-30dv50",
    "adapters/mm-adapter-piezosystem-nv120",
    "adapters/mm-adapter-piezosystem-nv40-1",
    "adapters/mm-adapter-piezosystem-nv40-3",
    "adapters/mm-adapter-piezosystem-ddrive",
    "adapters/mm-adapter-arduino32",
    "adapters/mm-adapter-arduino-counter",
    "adapters/mm-adapter-esp32",
    "adapters/mm-adapter-teensy-pulse",
    "adapters/mm-adapter-openuc2",
    "adapters/mm-adapter-openflexure",
    "adapters/mm-adapter-microfpga",
    "adapters/mm-adapter-xlight",
    "adapters/mm-adapter-sutter-lambda2",
    "adapters/mm-adapter-sutter-lambda-arduino",
    "adapters/mm-adapter-triggerscope",
    "adapters/mm-adapter-triggerscope-mm",
    "adapters/mm-adapter-varilc",
    "adapters/mm-adapter-leica-dmi",
    "adapters/mm-adapter-leica-dmr",
    "adapters/mm-adapter-universal-hub-serial",
    "adapters/mm-adapter-aaaotf",
    "adapters/mm-adapter-asi-wptr",
    "adapters/mm-adapter-diskovery",
    "adapters/mm-adapter-hydra-lmt200",
    "adapters/mm-adapter-thorlabs-ell14",
    "adapters/mm-adapter-xlight-v3",
    "adapters/mm-adapter-yokogawa",
    "adapters/mm-adapter-aquinas",
    "adapters/mm-adapter-etl",
    "adapters/mm-adapter-lumencor-cia",
    "adapters/mm-adapter-thorlabs-chrolis",
    "adapters/mm-adapter-xcite-led",
    "adapters/mm-adapter-xcite-xt600",
    "adapters/mm-adapter-opencv",
    "adapters/mm-adapter-illuminate-led",
    "adapters/mm-adapter-iidc",
    "adapters/mm-adapter-basler",
    "adapters/mm-adapter-jai",
    "adapters/mm-adapter-picam",
]
